[gd_scene load_steps=29 format=2]

[ext_resource path="res://Tilesets/CaveFloor_fixed.tres" type="TileSet" id=1]
[ext_resource path="res://Tilesets/Crystal2.tres" type="TileSet" id=2]
[ext_resource path="res://Tilesets/Cave.tres" type="TileSet" id=3]
[ext_resource path="res://Tilesets/TempleEntranceTileset.tres" type="TileSet" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/cave_bg.png" type="Texture" id=6]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/treasure/chest-0.png" type="Texture" id=8]
[ext_resource path="res://assets/treasure/chest-1.png" type="Texture" id=9]
[ext_resource path="res://assets/treasure/chest-2.png" type="Texture" id=10]
[ext_resource path="res://assets/treasure/chest-3.png" type="Texture" id=11]
[ext_resource path="res://assets/treasure/chest-4.png" type="Texture" id=12]
[ext_resource path="res://assets/treasure/chest-5.png" type="Texture" id=13]
[ext_resource path="res://assets/treasure/chest-6.png" type="Texture" id=14]
[ext_resource path="res://assets/treasure/chest-7.png" type="Texture" id=15]
[ext_resource path="res://assets/treasure/chest-8.png" type="Texture" id=16]
[ext_resource path="res://assets/treasure/chest-9.png" type="Texture" id=17]
[ext_resource path="res://assets/treasure/chest-10.png" type="Texture" id=18]
[ext_resource path="res://assets/treasure/chest-11.png" type="Texture" id=19]
[ext_resource path="res://assets/treasure/chest-12.png" type="Texture" id=20]
[ext_resource path="res://Scripts/Chest.gd" type="Script" id=21]
[ext_resource path="res://assets/food.png" type="Texture" id=22]
[ext_resource path="res://Scripts/gold_coin.gd" type="Script" id=23]
[ext_resource path="res://assets/audio/sound_coin.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/audio/music.ogg" type="AudioStream" id=25]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "unlock",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32, 10 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 45.2548

[node name="Room2" type="Node" index="0"]

[node name="Tilemaps" type="Node" parent="." index="0"]

editor/display_folded = true

[node name="Floor" type="TileMap" parent="Tilemaps" index="0"]

mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1376254, 0, 0, -1376253, 0, 0, -1245174, 0, 0, -1245173, 0, 0, -1245169, 0, 0, -1245165, 0, 0, -1245164, 0, 0, -1245159, 0, 0, -1245158, 0, 0, -1245157, 0, 0, -1245156, 0, 0, -1245155, 0, 0, -1245154, 0, 0, -1245153, 0, 0, -1179642, 0, 0, -1048575, 0, 0, -1048574, 0, 0, -1048573, 0, 0, -983023, 0, 0, -983022, 0, 0, -917499, 0, 0, -917479, 0, 0, -786426, 0, 0, -786425, 0, 0, -786404, 0, 0, -786403, 0, 0, -786402, 0, 0, -720882, 0, 0, -720877, 0, 0, -720876, 0, 0, -720875, 0, 0, -655349, 0, 0, -589824, 0, 0, -589823, 0, 0, -524281, 0, 0, -524265, 0, 0, -524264, 0, 0, -458745, 0, 0, -458744, 0, 0, -458739, 0, 0, -458738, 0, 0, -393212, 0, 0, -393201, 0, 0, -262144, 0, 0, -262143, 0, 0, -262133, 0, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -65523, 0, 0, 65553, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131079, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 327696, 0, 0, 327697, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 655373, 0, 0, 786443, 0, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 917511, 5, 0, 917524, 5, 0, 983056, 2, 0, 983064, 3, 0, 983070, 3, 0, 983071, 2, 0, 1048582, 3, 0, 1048584, 4, 0, 1048589, 3, 0, 1048590, 2, 0, 1048591, 2, 0, 1048593, 2, 0, 1048594, 2, 0, 1048595, 4, 0, 1048599, 5, 0, 1048601, 5, 0, 1114112, 2, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 5, 0, 1114117, 5, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 2, 0, 1114132, 5, 0, 1114133, 5, 0, 1114134, 5, 0, 1114138, 5, 0, 1114139, 5, 0, 1114140, 9, 0, 1114141, 9, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CaveDec" type="TileMap" parent="Tilemaps" index="1"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 458770, 2, 0, 786450, 1, 0, 917511, 3, 0, 983053, 8, 0, 1048578, 0, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Cave" type="TileMap" parent="Tilemaps" index="2"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1507296, 11, 0, -1441760, 11, 0, -1376224, 11, 0, -1310688, 11, 0, -1245152, 11, 0, -1179616, 11, 0, 524305, 4, 0, 851985, 5, 0, 917524, 5, 0, 983064, 2, 0, 983070, 2, 0, 1048582, 3, 0, 1048583, 11, 0, 1114112, 6, 0, 1114114, 6, 0, 1114115, 3, 0, 1114119, 11, 0, 1114128, 11, 0, 1114136, 11, 0, 1114140, 2, 0, 1114142, 11, 0, 1114143, 11, 0, 1179654, 11, 0, 1179655, 11, 0, 1179656, 11, 0, 1179661, 11, 0, 1179662, 11, 0, 1179663, 11, 0, 1179664, 11, 0, 1179665, 11, 0, 1179666, 11, 0, 1179667, 11, 0, 1179671, 11, 0, 1179672, 11, 0, 1179673, 11, 0, 1179678, 11, 0, 1179679, 11, 0, 1245184, 11, 0, 1245185, 11, 0, 1245186, 11, 0, 1245187, 11, 0, 1245188, 11, 0, 1245189, 11, 0, 1245190, 11, 0, 1245191, 11, 0, 1245192, 11, 0, 1245193, 11, 0, 1245194, 11, 0, 1245195, 11, 0, 1245196, 11, 0, 1245197, 11, 0, 1245198, 11, 0, 1245199, 11, 0, 1245200, 11, 0, 1245201, 11, 0, 1245202, 11, 0, 1245203, 11, 0, 1245204, 11, 0, 1245205, 11, 0, 1245206, 11, 0, 1245207, 11, 0, 1245208, 11, 0, 1245209, 11, 0, 1245210, 11, 0, 1245211, 11, 0, 1245212, 11, 0, 1245213, 11, 0, 1245214, 11, 0, 1245215, 11, 0, 1310720, 11, 0, 1310721, 11, 0, 1310722, 11, 0, 1310723, 11, 0, 1310724, 11, 0, 1310725, 11, 0, 1310726, 11, 0, 1310727, 11, 0, 1310728, 11, 0, 1310729, 11, 0, 1310730, 11, 0, 1310731, 11, 0, 1310732, 11, 0, 1310733, 11, 0, 1310734, 11, 0, 1310735, 11, 0, 1310736, 11, 0, 1310737, 11, 0, 1310738, 11, 0, 1310739, 11, 0, 1310740, 11, 0, 1310741, 11, 0, 1310742, 11, 0, 1310743, 11, 0, 1310744, 11, 0, 1310745, 11, 0, 1310746, 11, 0, 1310747, 11, 0, 1310748, 11, 0, 1310749, 11, 0, 1310750, 11, 0, 1310751, 11, 0, 1376256, 11, 0, 1376257, 11, 0, 1376258, 11, 0, 1376259, 11, 0, 1376260, 11, 0, 1376261, 11, 0, 1376262, 11, 0, 1376263, 11, 0, 1376264, 11, 0, 1376265, 11, 0, 1376266, 11, 0, 1376267, 11, 0, 1376268, 11, 0, 1376269, 11, 0, 1376270, 11, 0, 1376271, 11, 0, 1376272, 11, 0, 1376273, 11, 0, 1376274, 11, 0, 1376275, 11, 0, 1376276, 11, 0, 1376277, 11, 0, 1376278, 11, 0, 1376279, 11, 0, 1376280, 11, 0, 1376281, 11, 0, 1376282, 11, 0, 1376283, 11, 0, 1376284, 11, 0, 1376285, 11, 0, 1376286, 11, 0, 1376287, 11, 0, 1441792, 11, 0, 1441793, 11, 0, 1441794, 11, 0, 1441795, 11, 0, 1441796, 11, 0, 1441797, 11, 0, 1441798, 11, 0, 1441799, 11, 0, 1441800, 11, 0, 1441801, 11, 0, 1441802, 11, 0, 1441803, 11, 0, 1441804, 11, 0, 1441805, 11, 0, 1441806, 11, 0, 1441807, 11, 0, 1441808, 11, 0, 1441809, 11, 0, 1441810, 11, 0, 1441811, 11, 0, 1441812, 11, 0, 1441813, 11, 0, 1441814, 11, 0, 1441815, 11, 0, 1441816, 11, 0, 1441817, 11, 0, 1441818, 11, 0, 1441819, 11, 0, 1441820, 11, 0, 1441821, 11, 0, 1441822, 11, 0, 1441823, 11, 0, 1507328, 11, 0, 1507329, 11, 0, 1507330, 11, 0, 1507331, 11, 0, 1507332, 11, 0, 1507333, 11, 0, 1507334, 11, 0, 1507335, 11, 0, 1507336, 11, 0, 1507337, 11, 0, 1507338, 11, 0, 1507339, 11, 0, 1507340, 11, 0, 1507341, 11, 0, 1507342, 11, 0, 1507343, 11, 0, 1507344, 11, 0, 1507345, 11, 0, 1507346, 11, 0, 1507347, 11, 0, 1507348, 11, 0, 1507349, 11, 0, 1507350, 11, 0, 1507351, 11, 0, 1507352, 11, 0, 1507353, 11, 0, 1507354, 11, 0, 1507355, 11, 0, 1507356, 11, 0, 1507357, 11, 0, 1507358, 11, 0, 1507359, 11, 0 )
_sections_unfolded = [ "Cell", "Collision", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Temple" type="TileMap" parent="Tilemaps" index="3"]

z_index = -1
mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 917504, 0, 0 )
_sections_unfolded = [ "Cell", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." index="1" instance=ExtResource( 5 )]

position = Vector2( 32, 544 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Player" index="4"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="Player/ParallaxBackground" index="0"]

motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 1280, 704 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="Player/ParallaxBackground/ParallaxLayer" index="0"]

texture = ExtResource( 6 )
centered = false

[node name="Camera" parent="." index="2" instance=ExtResource( 7 )]

visible = false

[node name="Chest" type="AnimatedSprite" parent="." index="3"]

editor/display_folded = true
position = Vector2( 970, -607 )
scale = Vector2( 2, 2.0625 )
frames = SubResource( 1 )
animation = "default"
script = ExtResource( 21 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="Area2D" parent="Chest" index="0"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest/StaticBody2D" index="0"]

position = Vector2( -5, 6 )
scale = Vector2( 0.45, 1.1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Coins" type="Node" parent="." index="4"]

editor/display_folded = true

[node name="coin 1" type="Sprite" parent="Coins" index="0"]

editor/display_folded = true
position = Vector2( 122, 544 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 1" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 1/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 2" type="Sprite" parent="Coins" index="1"]

editor/display_folded = true
position = Vector2( 192, 512 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 2" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 2/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 3" type="Sprite" parent="Coins" index="2"]

editor/display_folded = true
position = Vector2( 416, 320 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 3" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 3/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 4" type="Sprite" parent="Coins" index="3"]

editor/display_folded = true
position = Vector2( 0, 64 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 4" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 4/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 5" type="Sprite" parent="Coins" index="4"]

editor/display_folded = true
position = Vector2( 832, 96 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 5" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 5/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 6" type="Sprite" parent="Coins" index="5"]

editor/display_folded = true
position = Vector2( 992, 480 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 6" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 6/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 7" type="Sprite" parent="Coins" index="6"]

editor/display_folded = true
position = Vector2( 768, -256 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 7" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 7/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 8" type="Sprite" parent="Coins" index="7"]

editor/display_folded = true
position = Vector2( 960, -384 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 8" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 8/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 9" type="Sprite" parent="Coins" index="8"]

editor/display_folded = true
position = Vector2( 0, -128 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 9" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 9/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 10" type="Sprite" parent="Coins" index="9"]

editor/display_folded = true
position = Vector2( 32, -512 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 10" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 10/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 11" type="Sprite" parent="Coins" index="10"]

editor/display_folded = true
position = Vector2( 480, -608 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 11" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 11/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 12" type="Sprite" parent="Coins" index="11"]

editor/display_folded = true
position = Vector2( 96, -672 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 12" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 12/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 13" type="Sprite" parent="Coins" index="12"]

editor/display_folded = true
position = Vector2( 544, -480 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 13" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 13/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="coin 14" type="Sprite" parent="Coins" index="13"]

editor/display_folded = true
position = Vector2( 864, -608 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 207.095, 0, 69.0316, 64 )
script = ExtResource( 23 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="Coins/coin 14" index="0"]

position = Vector2( 44, 32 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coins/coin 14/Area2D" index="0"]

position = Vector2( 1, 3 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="got_coin" type="AudioStreamPlayer" parent="Coins" index="14"]

stream = ExtResource( 24 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Background_music" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 25 )
volume_db = -10.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="ChestLabel" type="RichTextLabel" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 608.0
margin_top = -736.0
margin_right = 1024.0
margin_bottom = -608.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = "You need to collect all the peaches in this room!"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "You need to collect all the peaches in this room!"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[connection signal="animation_finished" from="Chest" to="Chest" method="_on_Chest_animation_finished"]

[connection signal="body_entered" from="Chest/StaticBody2D" to="Chest" method="_on_StaticBody2D_body_entered"]

[connection signal="body_exited" from="Chest/StaticBody2D" to="Chest" method="_on_StaticBody2D_body_exited"]

[connection signal="body_entered" from="Coins/coin 1/Area2D" to="Coins/coin 1" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 2/Area2D" to="Coins/coin 2" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 3/Area2D" to="Coins/coin 3" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 4/Area2D" to="Coins/coin 4" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 5/Area2D" to="Coins/coin 5" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 6/Area2D" to="Coins/coin 6" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 7/Area2D" to="Coins/coin 7" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 8/Area2D" to="Coins/coin 8" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 9/Area2D" to="Coins/coin 9" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 10/Area2D" to="Coins/coin 10" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 11/Area2D" to="Coins/coin 11" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 12/Area2D" to="Coins/coin 12" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 13/Area2D" to="Coins/coin 13" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Coins/coin 14/Area2D" to="Coins/coin 14" method="_on_Area2D_body_entered"]


